--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: go to "/quotes-service"
+      run: cd ./quotes-service
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
