added example app

--- a/kong-docker/dbless/docker-compose.yaml
+++ b/kong-docker/dbless/docker-compose.yaml
@@ -23,4 +23,8 @@ services:
       - "8444:8444"
     volumes:
       - ./config:/opt/kong
-    
+#  Uncomment lines to play around with quote service
+#  quote-service:
+#    image: gamussa/reactive-quote-service:0.0.3
+#    hostname: quotes
+#    container_name: quotes
