--- a/kong-docker/postgres/docker-compose.yaml
+++ b/kong-docker/postgres/docker-compose.yaml
@@ -49,8 +49,11 @@ services:
       - "8443:8443"
       - "8001:8001"
       - "8444:8444"
-    volumes:
-      - ./config:/opt/kong
+#  Uncomment lines to play around with quote service
+#  quote-service:
+#    image: gamussa/reactive-quote-service:0.0.3
+#    hostname: quotes
+#    container_name: quotes
 networks:
   default:
     name: kong-net
