--- a/quotes-service/build.gradle
+++ b/quotes-service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
   //grpc stuff
   implementation 'net.devh:grpc-server-spring-boot-starter:2.12.0.RELEASE'
   implementation "com.google.protobuf:protobuf-java:3.17.3"
+  implementation "io.grpc:grpc-stub:1.41.0"
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'io.projectreactor:reactor-test'
