kuma demo on minikube works

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,5 @@ $RECYCLE.BIN/
 /kic-prometheus-grafana/.idea/
 .idea
 gateway4mesh/istio/istio-*
+gateway4mesh/kuma/kong-mesh-*
+/gateway4mesh/kuma/microservices-demo/
