--- a/quotes-service/build.gradle
+++ b/quotes-service/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-  id 'org.springframework.boot' version '2.5.5'
+  id 'org.springframework.boot' version '2.6.0'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
   id 'idea'
-  //id 'org.springframework.experimental.aot' version '0.10.0-SNAPSHOT'
+  //id 'org.springframework.experimental.aot' version '0.10.5'
   id 'net.researchgate.release' version '2.8.1'
-  id "com.google.protobuf" version "0.8.17"
+  id "com.google.protobuf" version "0.8.18"
 }
 
 group = 'io.kong.developer'
@@ -25,16 +25,16 @@ repositories {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
   implementation "com.github.javafaker:javafaker:1.0.2"
-  implementation "io.dekorate:kubernetes-spring-starter:2.6.0"
-  annotationProcessor "io.dekorate:kubernetes-annotations:2.6.0"
+  implementation "io.dekorate:kubernetes-spring-starter:2.7.0"
+  annotationProcessor "io.dekorate:kubernetes-annotations:2.7.0"
 
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
 
   //grpc stuff
-  implementation 'net.devh:grpc-server-spring-boot-starter:2.12.0.RELEASE'
+  implementation 'net.devh:grpc-server-spring-boot-starter:2.13.0.RELEASE'
   implementation "com.google.protobuf:protobuf-java:3.18.1"
-  implementation "io.grpc:grpc-stub:1.41.0"
+  implementation "io.grpc:grpc-stub:1.41.1"
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'io.projectreactor:reactor-test'
@@ -43,13 +43,6 @@ dependencies {
 test {
   useJUnitPlatform()
 }
-
-/*
-bootBuildImage {
-  builder = 'paketobuildpacks/builder:tiny'
-  environment = ['BP_NATIVE_IMAGE': 'true']
-}
-*/
 
 release {
   git {
