--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,4 @@ $RECYCLE.BIN/
 gateway4mesh/istio/istio-*
 gateway4mesh/kuma/kong-mesh-*
 /gateway4mesh/kuma/microservices-demo/
+/kong-builders/12-01-2021/istio-*
