--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,6 @@ $RECYCLE.BIN/
 
 /kic-prometheus-grafana/.idea/
 .idea
-gateway4mesh/istio/istio-*
+istio-*
 gateway4mesh/kuma/kong-mesh-*
 /gateway4mesh/kuma/microservices-demo/
-/kong-builders/12-01-2021/istio-*
