building docker images

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,27 +10,64 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  
+  quotes-service:
+    defaults: 
+      run: 
+        working-directory: quotes-service
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '11', '17' ]
+    name: Running tests with Java ${{ matrix.Java }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK ${{ matrix.Java }}
+        uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'liberica'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build Docker Image AMD64 
+        run: ./gradlew bootBuildImage --imageName gamussa/reactive-quote-service:latest-amd64
+      - name: Build Docker Image ARM64 
+        run: ./gradlew bootBuildImage --imageName gamussa/reactive-quote-service:latest-arm64 --builder docker.io/dmikusa2pivotal/builder:focal
+      - name: Create multiarch manifest
+        run: docker manifest create gamussa/reactive-quote-service:latest --amend gamussa/reactive-quote-service:latest-amd64 --amend gamussa/reactive-quote-service:latest-arm64
+      - name: Push to Docker Hub
+        run: docker push gamussa/reactive-quote-service:manifest-amd64 && docker push gamussa/reactive-quote-service:manifest-arm64 && docker manifest push gamussa/reactive-quote-service:latest
+  
+  rest:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        java: [ '11', '17' ]
+    name: Running tests with Java ${{ matrix.Java }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-    - name: <quotes-service> Grant execute permission for gradlew
-      run: cd ./quotes-service && chmod +x gradlew
-    - name: <quotes-service> Build with Gradle
-      run: cd ./quotes-service && ./gradlew build
-    - name: <kafka-spring> Grant execute permission for gradlew
-      run: cd ./kafka-spring && chmod +x gradlew
-    - name: <kafka-spring> Build with Gradle
-      run: cd ./kafka-spring && ./gradlew build -x test
-    - name: <native-quote-service> Grant execute permission for gradlew
-      run: cd ./kong-builders/11-10-2021/native-quote-service && chmod +x gradlew
-    - name: <native-quote-service> Build with Gradle
-      run: cd ./kong-builders/11-10-2021/native-quote-service && ./gradlew build -x test
+      - uses: actions/checkout@v2
+      - name: Set up JDK ${{ matrix.Java }}
+        uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'liberica'
+      - name: <kafka-spring> Grant execute permission for gradlew
+        run: cd ./kafka-spring && chmod +x gradlew
+      - name: <kafka-spring> Build with Gradle
+        run: cd ./kafka-spring && ./gradlew build -x test
+      - name: <native-quote-service> Grant execute permission for gradlew
+        run: cd ./kong-builders/11-10-2021/native-quote-service && chmod +x gradlew
+      - name: <native-quote-service> Build with Gradle
+        run: cd ./kong-builders/11-10-2021/native-quote-service && ./gradlew build -x test
 
