--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '11', '17' ]
+        java: [ '11' ]
     name: Running tests with Java ${{ matrix.Java }}
     steps:
       - uses: actions/checkout@v2
