--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,16 +16,17 @@ jobs:
       run: 
         working-directory: quotes-service
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [ '11' ]
-    name: Running tests with Java ${{ matrix.Java }}
+#    strategy:
+#      matrix:
+#        java: [ '11' ]
+    #name: Running tests with Java ${{ matrix.Java }}
+    name: Running tests with Java 11
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK ${{ matrix.Java }}
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: ${{ matrix.java }}
+          java-version: 11
           distribution: 'liberica'
 
       - name: Grant execute permission for gradlew
@@ -38,6 +39,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        
       - name: Build Docker Image AMD64 
         run: ./gradlew bootBuildImage --imageName gamussa/reactive-quote-service:latest-amd64
       - name: Build Docker Image ARM64 
