--- a/quotes-service/build.gradle
+++ b/quotes-service/build.gradle
@@ -1,11 +1,12 @@
 plugins {
-  id 'org.springframework.boot' version '2.6.3'
+  id 'org.springframework.boot' version '2.6.6'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
   id 'idea'
   //id 'org.springframework.experimental.aot' version '0.10.5'
   id 'net.researchgate.release' version '2.8.1'
-  id "com.google.protobuf" version "0.8.18"
+  id 'com.google.protobuf' version '0.8.18'
+  id 'com.gorylenko.gradle-git-properties' version '2.4.0'
 }
 
 group = 'io.kong.developer'
@@ -24,17 +25,18 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
   implementation "com.github.javafaker:javafaker:1.0.2"
-  implementation "io.dekorate:kubernetes-spring-starter:2.8.0"
-  annotationProcessor "io.dekorate:kubernetes-annotations:2.8.0"
+  implementation "io.dekorate:kubernetes-spring-starter:2.9.0"
+  annotationProcessor "io.dekorate:kubernetes-annotations:2.9.0"
 
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
 
   //grpc stuff
   implementation 'net.devh:grpc-server-spring-boot-starter:2.13.1.RELEASE'
-  implementation "com.google.protobuf:protobuf-java:3.19.3"
-  implementation "io.grpc:grpc-stub:1.44.0"
+  implementation "com.google.protobuf:protobuf-java:3.20.0"
+  implementation "io.grpc:grpc-stub:1.45.1"
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'io.projectreactor:reactor-test'
