--- a/quotes-service/src/main/resources/application.properties
+++ b/quotes-service/src/main/resources/application.properties
@@ -6,6 +6,9 @@ grpc.server.port=6565
 #grpc.server.security.privateKey=file:/Users/viktor.gamov/projects/kong/quotes-service/server.key
 
 management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
 management.info.java.enabled=true
 management.info.git.enabled=true
 management.info.env.enabled=true
