--- a/kic-gateway-api/kubernetes/02_deployment/02_deployment_back2future.yaml
+++ b/kic-gateway-api/kubernetes/02_deployment/02_deployment_back2future.yaml
@@ -4,21 +4,21 @@ metadata:
   annotations:
     app.dekorate.io/vcs-url: <<unknown>>
   labels:
-    app.kubernetes.io/version: 0.0.4-SNAPSHOT
+    app.kubernetes.io/version: latest
     app.kubernetes.io/name: back2future-quote-service
   name: back2future-quote-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/version: 0.0.4-SNAPSHOT
+      app.kubernetes.io/version: latest
       app.kubernetes.io/name: back2future-quote-service
   template:
     metadata:
       annotations:
         app.dekorate.io/vcs-url: <<unknown>>
       labels:
-        app.kubernetes.io/version: 0.0.4-SNAPSHOT
+        app.kubernetes.io/version: latest
         app.kubernetes.io/name: back2future-quote-service
     spec:
       containers:
@@ -29,14 +29,19 @@ spec:
                   fieldPath: metadata.namespace
             - name: QUOTE_SERVICE
               value: backToFuture
-          image: gamussa/reactive-quote-service:0.0.4-SNAPSHOT
-          imagePullPolicy: IfNotPresent
+          image: gamussa/reactive-quote-service:latest
+          imagePullPolicy: Always
+          livenessProbe:
+            initialDelaySeconds: 5
+            periodSeconds: 3
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
           name: back2future-quote-service
           ports:
             - containerPort: 8080
               name: web
               protocol: TCP
-    
 ---
 apiVersion: v1
 kind: Service
@@ -45,7 +50,7 @@ metadata:
     app.dekorate.io/vcs-url: <<unknown>>
   labels:
     app.kubernetes.io/name: back2future-quote-service
-    app.kubernetes.io/version: 0.0.4-SNAPSHOT
+    app.kubernetes.io/version: latest
   name: back2future-quote-service
 spec:
   ports:
@@ -54,5 +59,5 @@ spec:
       targetPort: 8080
   selector:
     app.kubernetes.io/name: back2future-quote-service
-    app.kubernetes.io/version: 0.0.4-SNAPSHOT
+    app.kubernetes.io/version: latest
   type: ClusterIP
