--- a/kic-gateway-api/kubernetes/03_httproute/03_httproute_host.yaml
+++ b/kic-gateway-api/kubernetes/03_httproute/03_httproute_host.yaml
@@ -1,15 +1,13 @@
 apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: HTTPRoute
 metadata:
-  name: back2future
+  name: back2future-host
 spec:
   parentRefs:
     - name: kong
+  hostnames:
+    - "back2future.kongproxy.me"
   rules:
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /back2future
-      backendRefs:
+    - backendRefs:
         - name: back2future-quote-service
           port: 8080
