--- a/quotes-service/src/main/resources/application.properties
+++ b/quotes-service/src/main/resources/application.properties
@@ -4,3 +4,15 @@ grpc.server.port=6565
 #grpc.server.security.enabled=true
 #grpc.server.security.certificateChain=file:/Users/viktor.gamov/projects/kong/quotes-service/server.crt
 #grpc.server.security.privateKey=file:/Users/viktor.gamov/projects/kong/quotes-service/server.key
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
+management.info.java.enabled=true
+management.info.git.enabled=true
+management.info.env.enabled=true
+## Configuring info endpoint
+info.app.name=Quotes Service
+info.app.description=Random pop-culture references and quotes
+info.app.version=0.0.5
