--- a/quotes-service/src/main/resources/application.properties
+++ b/quotes-service/src/main/resources/application.properties
@@ -16,3 +16,6 @@ management.info.env.enabled=true
 info.app.name=Quotes Service
 info.app.description=Random pop-culture references and quotes
 info.app.version=0.0.5
+
+spring.banner.image.location=classpath:banner-kong.jpg
+spring.banner.image.pixelmode=block
