--- a/udp-quotes-service/build.gradle
+++ b/udp-quotes-service/build.gradle
@@ -2,7 +2,7 @@ plugins {
   id 'groovy'
   id 'application'
   id 'idea'
-  id 'com.google.cloud.tools.jib' version '3.1.4'
+  id 'com.google.cloud.tools.jib' version '3.2.1'
 }
 
 group = 'io.kongproxy.developer'
@@ -18,20 +18,20 @@ dependencies {
 
   // define dependencies without versions
   implementation 'io.projectreactor.netty:reactor-netty-core'
-  implementation("com.github.javafaker:javafaker:1.0.2")
+  implementation "net.datafaker:datafaker:1.4.0"
   // Use the latest Groovy version for Spock testing
-  compileOnly 'org.projectlombok:lombok:1.18.20'
-  annotationProcessor 'org.projectlombok:lombok:1.18.20'
+  compileOnly 'org.projectlombok:lombok:1.18.24'
+  annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-  testImplementation 'org.codehaus.groovy:groovy:3.0.8'
-  testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+  testImplementation 'org.codehaus.groovy:groovy:3.0.10'
+  testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
   testImplementation 'junit:junit:4.13.2'
 
   //implementation 'com.google.guava:guava:30.1.1-jre'
-  implementation 'org.slf4j:slf4j-api:1.7.32'
+  implementation 'org.slf4j:slf4j-api:1.7.36'
 
-  implementation 'com.typesafe:config:1.4.1'
-  implementation 'ch.qos.logback:logback-classic:1.2.6'
+  implementation 'com.typesafe:config:1.4.2'
+  implementation 'ch.qos.logback:logback-classic:1.2.11'
 }
 
 application {
