--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,6 @@ gateway4mesh/kuma/kong-mesh-*
 /gateway4mesh/kuma/microservices-demo/
 *.dylib
 kuma-*.tgz
+/mesh-on-arm/Brewfile.lock.json
+/mesh-on-arm/app/blog/api/node_modules/
+node_modules/
