updated Istio demo

--- a/gateway4mesh/istio/Makefile
+++ b/gateway4mesh/istio/Makefile
@@ -16,10 +16,12 @@ TIMESTAMP=$(shell date)
 
 pad=$(printf '%0.1s' "-"{1..80})
 
-ISTIO_VERSION ?= 1.11.2
+ISTIO_VERSION ?= 1.14.3
 KONG_NAMESPACE ?= kong-istio
 DEMO_NAMESPACE ?= bookinfo
 KONG_HELM_RELEASE ?= kong-istio
+
+PUBLIC_DOMAIN ?= istio.kongproxy.me
 
 #KONG_IP = $(shell minikube service -n kong-istio kong-istio-kong-proxy --url | head -1) 
 
@@ -54,6 +56,10 @@ install-istio:
 	istioctl install --set profile=minimal -y
 	@echo ""
 
+uninstall-istio:
+	@echo "☸️  ${RED} Uninstalling Istio 🔥 ⛵..."
+	istioctl x uninstall --purge -y
+	@echo ""
 install-kong: check-dependencies
 	@echo "☸️  Installing Kong 🦍 to ${GREEN}${KONG_NAMESPACE}${RESET} namespace..."
 	kubectl create namespace ${KONG_NAMESPACE}
@@ -64,7 +70,7 @@ install-kong: check-dependencies
 	@echo ""
 
 uninstall-kong: check-dependencies
-	@echo "☸️  Uninstalling Kong from ${GREEN}${KONG_NAMESPACE}${RESET} namespace..."
+	@echo "☸️ ${RED} Uninstalling Kong from ${GREEN}${KONG_NAMESPACE}${RESET} namespace...${RESET}"
 	helm uninstall -n ${KONG_NAMESPACE} ${KONG_HELM_RELEASE}
 	kubectl delete namespace ${KONG_NAMESPACE}
 	@echo ""
@@ -72,19 +78,35 @@ uninstall-kong: check-dependencies
 get-kong-ip-minikube:
 	minikube service -n kong-istio kong-istio-kong-proxy --url | head -1
 
+get-kong-ip-k8s:
+	kubectl get svc --namespace ${KONG_NAMESPACE} ${KONG_HELM_RELEASE}-kong-proxy -o jsonpath='{.status.loadBalancer.ingress[0].ip}'
+
+dig:
+	dig +short ${PUBLIC_DOMAIN}
+
+validate-cert:
+	openssl s_client -showcerts -verify 3 -servername ${PUBLIC_DOMAIN} -connect ${PUBLIC_DOMAIN}:443 > /dev/null
+
 #test: #test target to call other targets
 #	@$(MAKE) -f $(THIS_MKFILE_PATH) get-kong-ip-minikube
 
 install-demo-app:
-	@echo "☸️  Installing Bookinfo Demo app"
+	@echo "☸️  Installing Bookinfo Demo app..."
 	kubectl create namespace ${DEMO_NAMESPACE}     
 	kubectl label namespace ${DEMO_NAMESPACE} istio-injection=enabled
 	kubectl -n ${DEMO_NAMESPACE} apply -f ${THIS_MKFILE_DIR}istio-${ISTIO_VERSION}/samples/bookinfo/platform/kube/bookinfo.yaml
-	kubectl -n ${DEMO_NAMESPACE} wait --timeout=175s --for=condition=Available deployment productpage-v1
+	kubectl -n ${DEMO_NAMESPACE} wait --timeout=180s --for=condition=Available deployment productpage-v1
 	kubectl -n ${DEMO_NAMESPACE} apply -f ingress.yaml
 	@echo ""
 	@echo "Installing samples ${BLUE}DestinationRule${RESET}"
 	kubectl -n ${DEMO_NAMESPACE} apply -f istio-${ISTIO_VERSION}/samples/bookinfo/networking/destination-rule-reviews.yaml
+	@echo ""
+
+uninstall-demo-app:
+	@echo "📖 💣 ${RED} Uninstalling sample app... ${RESET}"
+	kubectl -n ${DEMO_NAMESPACE} delete -f ${THIS_MKFILE_DIR}istio-${ISTIO_VERSION}/samples/bookinfo/platform/kube/bookinfo.yaml
+	kubectl -n ${DEMO_NAMESPACE} delete -f ${THIS_MKFILE_DIR}istio-${ISTIO_VERSION}/samples/bookinfo/networking/destination-rule-reviews.yaml
+	kubectl delete namespace ${DEMO_NAMESPACE} 
 	@echo ""
 
 install-obs-tools: check-dependencies
@@ -94,11 +116,46 @@ install-obs-tools: check-dependencies
 	kubectl apply -f ${THIS_MKFILE_DIR}istio-${ISTIO_VERSION}/samples/addons/kiali.yaml
 	@echo ""
 
-install-plugin-rate-limiting:
+uninstall-obs-tools: check-dependencies
+	@echo "☸️  💣  ${RED}Uninstalling Observability Tools... ${RESET}"
+	kubectl delete -f ${THIS_MKFILE_DIR}istio-${ISTIO_VERSION}/samples/addons/prometheus.yaml
+	kubectl delete -f ${THIS_MKFILE_DIR}istio-${ISTIO_VERSION}/samples/addons/jaeger.yaml
+	kubectl delete -f ${THIS_MKFILE_DIR}istio-${ISTIO_VERSION}/samples/addons/kiali.yaml
+	@echo ""
+
+install-plugin-rate-limiting-simple:
 	@echo "🦍 Installing Kong Rate Limiting Plugin"
 	kubectl -n ${DEMO_NAMESPACE} apply -f plugin.yaml 
 	kubectl -n ${DEMO_NAMESPACE} patch ingress productpage -p '{"metadata":{"annotations":{"konghq.com/plugins":"rate-limit"}}}'
 	@echo ""
+
+install-plugin-rate-limiting-sla-demo:
+	@echo "🦍 Installing Kong Rate Limiting Plugin for Free, Paid and Platinum tiers..."
+	kubectl -n ${DEMO_NAMESPACE} apply -f ./plugins
+	@echo ""
+
+uninstall-plugin-rate-limiting-sla-demo:
+	@echo "🦍 ${RED} Removing Kong Rate Limiting Plugin for Free, Paid and Platinum tiers...${RESET}"
+	kubectl -n ${DEMO_NAMESPACE} delete -f ./plugins 
+	kubectl -n ${DEMO_NAMESPACE} apply -f ingress.yaml
+	@echo ""
+
+kong-ingress-enable-free-tier:
+	@echo "${BLUE} Patching Ingress and enabling free Tier..." 
+	kubectl -n ${DEMO_NAMESPACE} patch ingress productpage -p '{"metadata":{"annotations":{"konghq.com/plugins":"rate-free-tier"}}}'
+	@echo ""	
+
+kong-ingress-enable-paid-tier:
+	@echo "${BLUE} Patching Ingress and enabling Paid 💰 Tier..." 
+	kubectl -n ${DEMO_NAMESPACE} patch ingress productpage -p '{"metadata":{"annotations":{"konghq.com/plugins":"rate-free-tier,user1-auth,rate-paid-tier"}}}'
+	@echo ""
+
+kong-ingress-enable-platinum-tier:
+	@echo "${BLUE} Patching Ingress and enabling Platinum 🤑 💰 🤑 Tier..." 
+	kubectl -n ${DEMO_NAMESPACE} patch ingress productpage -p '{"metadata":{"annotations":{"konghq.com/plugins":"rate-free-tier,user1-auth,rate-paid-tier,platinum-paid-tier"}}}'
+	@echo ""
+
+nuke-all: uninstall-plugin-rate-limiting-sla-demo uninstall-demo-app uninstall-obs-tools uninstall-kong uninstall-istio
 
 port-forwarding:
 	@echo "Exposing Kiali..."
